Fix for services layout issue on mobile

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -397,7 +397,7 @@ p > strong {
   padding: 0 $spacing-md;
 
   @media screen and (max-width: 1000px) {
-    max-width: 100vw;
+    max-width: calc(100vw - $spacing-sm * 2);
     padding: 0 $spacing-sm;
   }
 }
